--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ certifi==2020.12.5
 cffi==1.14.3
 chardet==4.0.0
 Django==3.1.6
+django-redis==4.12.1
 django-cors-headers==3.7.0
 django-filter==2.4.0
 djangorestframework==3.12.2
