--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ after_success:
 deploy:
   provider: script
   skip_cleanup: true
-  script: chmod 600 deploy_key && sshpass -e ssh -o StrictHostKeyChecking=no -i ./deploy_key root@$HOST_IP '/uks2020/deploy.sh'
+  script: chmod 600 deploy_key && sshpass -e ssh -o StrictHostKeyChecking=no -i ./deploy_key root@$HOST_IP 'cd /home/some/dir ; exec "$SHELL" && /uks2020/deploy.sh'
   on:
     branch: master
